# WebScrapingDistributed

./: .dockerignore  .env.template  .gitignore  README.md  docker-compose.yml
infra/: init-aws.sh
producer/: Dockerfile  README.md  main.py  pyproject.toml
producer/config/: settings.py
producer/dependencies/: dependencies.py
producer/infrastructure/task/: base.py
producer/infrastructure/task/sqs/: adapter.py
producer/scraping/: controller.py
producer/scraping/models/: __init__.py  bulk_task.py  job_accepted_response.py
producer/scraping/services/: __init__.py  scraping_service.py
shared/: pyproject.toml
shared/shared/: __init__.py  logging.py  models.py
shared/shared/models/: __init__.py  batch_task_response.py  scraping_task.py
shared/shared/models/parse_config/: __init__.py  base.py  factory.py  static_css.py  validators.py
shared/shared/models/parse_type/: __init__.py  enum.py
worker/: Dockerfile  main.py  pyproject.toml
worker/config/: settings.py
worker/dependencies/: __init__.py  dependencies.py
worker/infrastructure/task/: base.py
worker/infrastructure/task/sqs/: adapter.py
